--- a/src/app/ui/AttachmentWithReferences.css
+++ b/src/app/ui/AttachmentWithReferences.css
@@ -1,5 +1,5 @@
-.refList {
-    font-face: sans-serif;
-    font-size: 80%;
-    margin-left: 10px;
+.ref-list__summary {
+  font-family: sans-serif;
+  font-size: 80%;
+  margin-left: 10px;
 }
