--- a/src/app/ui/AttachmentWithReferences.css
+++ b/src/app/ui/AttachmentWithReferences.css
@@ -31,5 +31,10 @@ details[open] > summary::after {
 
 .pva-citation-button {
   appearance: none;
-  color: Green;
+  border: 0;
+  background-color: transparent;
+  color: #118DFF;
+  cursor: pointer;
+  padding: 0;
+  text-decoration: underline;
 }
