--- a/src/app/ui/References/References.css
+++ b/src/app/ui/References/References.css
@@ -1,28 +1,7 @@
-.outerBox {
-    margin: 2px;
-    padding: 2px;
-    border: 1px solid #d1d1d1;
-    border-radius: 6px;
-    background-color: #ffffff;
-    display: block;
-}
-
-.innerBox {
-    margin: 4px;
-    padding: 2px;
-    border: 1px solid #EDEBE9;
-    background-color: #ffffff;
-    border-radius: 6px;
-    font-size: 75%;
-    vertical-align: middle;
-    display: inline-block;
-}
-
-ul {
-    padding-left: 0;
-}
-
-li {
-    list-style: none;
-    font-family: Calibri, "Helvetica Neue", Arial, "sans-serif";
+.pva__references {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  margin: 10px;
+  padding: 0;
 }
