--- a/src/app/ui/AttachmentWithReferences.css
+++ b/src/app/ui/AttachmentWithReferences.css
@@ -33,7 +33,7 @@ details[open] > summary::after {
   appearance: none;
   border: 0;
   background-color: transparent;
-  color: #118DFF;
+  color: var(--pva__accent-color);
   cursor: pointer;
   font-family: inherit;
   font-size: inherit;
@@ -43,5 +43,5 @@ details[open] > summary::after {
 }
 
 .pva__generative-answer-markdown__reference--link {
-  color: #118DFF;
+  color: var(--pva__accent-color);
 }
