--- a/src/app/ui/AttachmentWithReferences.css
+++ b/src/app/ui/AttachmentWithReferences.css
@@ -35,7 +35,6 @@ details[open] > summary::after {
 
 .pva__generative-answer-markdown__reference::before {
   content: '[';
-  padding-left: .2em;
 }
 
 .pva__generative-answer-markdown__reference--citation {
@@ -47,10 +46,19 @@ details[open] > summary::after {
   font-family: inherit;
   font-size: inherit;
   padding: 0;
-  text-decoration: underline;
   white-space: nowrap;
 }
 
 .pva__generative-answer-markdown__reference--link {
   color: var(--pva__accent-color);
+  text-decoration: none;
+}
+
+.pva__generative-answer-markdown__external-icon {
+  -webkit-mask-image: var(--pva__external-link-icon);
+  background-color: var(--pva__accent-color);
+  height: .75em;
+  mask-image: var(--pva__external-link-icon);
+  margin: 0 .1em;
+  width: .75em!important; /* Web Chat maximize <img>, we should fix it there */
 }
