--- a/src/app/ui/CitationWindowProvider/private/CitationWindow.css
+++ b/src/app/ui/CitationWindowProvider/private/CitationWindow.css
@@ -10,6 +10,7 @@ div .mainWindow {
     padding: 8px;
     display: flex;
     flex-direction: column;
+    word-wrap: normal;
 }
 
 div > button.closeBox {
