add scrolling overflow to citation window

--- a/src/app/ui/CitationWindowProvider/private/CitationWindow.css
+++ b/src/app/ui/CitationWindowProvider/private/CitationWindow.css
@@ -11,6 +11,7 @@ div .mainWindow {
     display: flex;
     flex-direction: column;
     word-wrap: normal;
+    overflow-y: scroll;
 }
 
 div > button.closeBox {
