put citation-window CSS in the right file

--- a/src/app/ui/CitationWindowProvider/private/CitationWindow.css
+++ b/src/app/ui/CitationWindowProvider/private/CitationWindow.css
@@ -25,3 +25,13 @@ div > button.closeBox:focus{
     border: 2px solid black;
     border-radius: 2px;
 }
+
+span.contents a {
+    text-decoration: underline;
+}
+span.contents a::before {
+    content: '';
+}
+span.contents a::after {
+    content: '';
+}
