--- a/src/app/ui/ActivityStatus/private/Originator/Originator.css
+++ b/src/app/ui/ActivityStatus/private/Originator/Originator.css
@@ -10,7 +10,7 @@
   /* These are the fonts used in Web Chat default style options. */
   font-family: Calibri, 'Helvetica Neue', Arial, sans-serif;
   font-size: 80%;
-  padding-top: 5px;
+  padding: 1px 1px 2px 1px;
 }
 
 .webchat__originator-activity-status--link {
